<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/ic_launcher"
        android:scaleType="fitXY"
        android:scaleX="1.2"
        android:scaleY="1.2" />
    
    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textSize="18sp"
        android:fontFamily="sans-serif-condensed" />
    
    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="10dp"
        android:text="@string/version"
        android:textSize="18sp"
        android:fontFamily="sans-serif-condensed" />
    
    <TextView
        android:id="@+id/aboutText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/aboutme"
        android:textSize="16sp"
        android:fontFamily="sans-serif-condensed" />
    
    <TextView
        android:id="@+id/myEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/myemail"
        android:textSize="16sp"
        android:fontFamily="sans-serif-condensed"
        android:onClick="sendEmail"
        android:clickable="true"
        android:autoLink="email" />

</LinearLayout>
